--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
+        "node-sass": "^8.0.0",
         "postcss": "^8.1.14",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.57.1",
+        "sass-loader": "^13.2.0",
         "vue-loader": "^16.8.3"
     },
     "dependencies": {
